[package]
name = "tree-of-stars"
version = "0.1.0"
authors = ["Abe Egnor <abe.egnor@gmail.com>"]

[dependencies]
ggez = "0.4"
gfx = "0.17"
gfx_device_gl = "0.15"
hex2d = "0.2"
hibitset = "0.5"
petgraph = "0.4"
rand = "0.6"
shred = "0.7"
shred-derive = "0.5"
spade = "1.6"
specs = "0.14"

imgui = { path = "../imgui-rs" }
imgui-gfx-renderer = { path = "../imgui-rs/imgui-gfx-renderer" }

[profile.release]
debug = true